--- a/blank_zexp.lpi
+++ b/blank_zexp.lpi
@@ -11,7 +11,6 @@
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -54,7 +53,7 @@
         <PackageName Value="LCL"/>
       </Item8>
     </RequiredPackages>
-    <Units Count="25">
+    <Units Count="26">
       <Unit0>
         <Filename Value="blank_zexp.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -217,6 +216,10 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit24>
+      <Unit25>
+        <Filename Value="u_metainfo.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit25>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -248,7 +251,7 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="6">
+    <Exceptions Count="7">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -267,6 +270,9 @@
       <Item6>
         <Name Value="EGridException"/>
       </Item6>
+      <Item7>
+        <Name Value="Exception"/>
+      </Item7>
     </Exceptions>
   </Debugging>
 </CONFIG>
